--- a/part1-dom.html
+++ b/part1-dom.html
@@ -72,7 +72,11 @@
     <fieldset>
         <legend>Traversal</legend>
         <label for="walkBtn">Basic Traversal</label>
+        <textarea id="nodeInfo" cols="40" rows="25"></textarea><br> <!-- Q1a-->
         <input type="button" id="walkBtn" value="Walk">
+
+        <!-- Q1b -->
+        <input type="button" id="advWalkBtn" value="advWalk">
 
         <!--
             Q1a) Modify the simple walk button example to not use alerts but instead to print out the node information on the page in a <textarea> within this fieldset. Using appropriate spacing or returns, so we can see each step
