--- a/part1-dom.html
+++ b/part1-dom.html
@@ -52,6 +52,25 @@
             animation-direction: alternate;
         }
 
+        .schmancy{
+            animation-name: cssAnim;
+            animation-duration: 5s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+        }
+        
+        /* https://www.html.am/html-codes/marquees/slide-in-text.cfm Slide in text animation from here */
+        @keyframes cssAnim {
+            from{
+                margin-left:100%;
+                width: 300%;
+            }
+            to{
+                margin-left: 0%;
+                width: 100%;
+            }
+        }
+
         @keyframes backgroundColorPalette {
             0% {background: var(--color1);}
             25% {background: #60d394;}
@@ -63,7 +82,7 @@
 </head>
 <body>
 <!-- start of HTML demo -->
-<h1>Vanilla DOM Manipulation</h1>
+<h1 id="txtChange">Vanilla DOM Manipulation</h1>
 <p id="p1">This is a <em>test</em> of the DOM</p>
 
 <section id="controls">
@@ -92,7 +111,7 @@
         <legend>Modify</legend>
         <label for="modifyBtn">Simple Modification</label>
         <input type="button" id="modifyBtn" value="Modify">
-
+        <input type="button" id="advModifyBtn" value="advModify">
         <!--
             Q2) Add a new button "Advanced Modify" that does the following:
             1.  Changes the text of the h1 to say "DOM Manipulation is Fun!"
@@ -105,7 +124,13 @@
         <legend>Add</legend>
         <label for="addBtn">Basic Addition</label>
         <input type="button" id="addBtn" value="Add">
-
+        <label for="cars">Select Element to Add:</label>
+        <select name="cars" id="cars">
+            <option value="textNode">Text Node</option>
+            <option value="Comment">Comment</option>
+            <option value="Element">Element</option>
+            <input type="button" id="submitBtn" value="submit">
+        </select>
         <!--
             Q3) Add a select menu that allows you to add a new element to the DOM.  The select menu should have the following options: Text Node, Comment, and Element. When you select one of these options and click the button, the appropriate element should be added to the DOM.  You may want to define an output tag to put the newly created elements in it and style it in a fashion with a border or background color, so you can tell it is new content.  You will need a corresponding text field to define the contents of the text node, comment text, or tag name you want to insert.  By default set the text of any added element to say "New Element" or "New Comment" or "New Text Node" depending on the type of element you are adding but add in the current date and time using a JS Date object.  You can use the toLocaleString() method to get a nicely formatted date and time string.
 
@@ -116,6 +141,8 @@
         <legend>Remove</legend>
         <label for="removeBtn">Simple Delete</label>
         <input type="button" id="removeBtn" value="Remove">
+        <input type="button" id="safeDeleteBtn" value="safeRemove">
+        <input type="button" id="selectorDeleteBtn" value="selectorRemove">
         <!--
 
           Q4a) Safe Delete
