added clone button

--- a/part1-dom.html
+++ b/part1-dom.html
@@ -155,6 +155,9 @@
 
     <fieldset>
         <legend>Clone</legend>
+        <label for="cloneBtn">Clone</label>
+        <input type="button" id="basicCloneBtn" value="clone">
+        
         <!--
           Q5a) Add a button "Basic Clone" that clones the p tag and adds it to the DOM.  You can add it to the same area you added new content.  Be cautious with your cloning to modify attributes
 
