--- a/part1-dom.html
+++ b/part1-dom.html
@@ -57,6 +57,7 @@
             animation-duration: 5s;
             animation-iteration-count: infinite;
             animation-direction: alternate;
+            animation-play-state: running;
         }
 
         .newPStyle{
