--- a/part1-dom.html
+++ b/part1-dom.html
@@ -200,7 +200,7 @@
         <img src="" alt="Avatar" class="Avatar">
         <div class="container">
           <h4 class="title"><b>Card Name</b></h4> 
-          <p id="shortParagraph">Short Paragraph</p> 
+          <p class="shortParagraph">Short Paragraph</p> 
           <p class="link">Link</p>
         </div>
     </div>
