--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 
 <template id="cardTemplate">
     <div class="card">
-        <img src="" alt="avatar" class="avatar">
         <div class="container">
-          <h4 class="title"><b>Card Name</b></h4> 
-          <p class="shortParagraph">Short Paragraph</p> 
-          <p class="link">Link</p>
+            <h4 class="title"><b>Card Name</b></h4> 
+            <p class="shortParagraph">Short Paragraph</p>
+            <a href="https://idyllic-cupcake-26201e.netlify.app/">Link</a><br>
+            <img src="" alt="avatar" class="avatar">
         </div>
     </div>
 </template>
