--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="container">
             <h4 class="title"><b>Card Name</b></h4> 
             <p class="shortParagraph">Short Paragraph</p>
-            <a href="https://idyllic-cupcake-26201e.netlify.app/">Link</a><br>
+            <a href="https://idyllic-cupcake-26201e.netlify.app/">Refresh The Page Link</a><br>
             <img src="" alt="avatar" class="avatar">
         </div>
     </div>
